test/gpu/native/halting/gpuhalt.cpu-as-device.good
I shall not halt
I shall halt
gpuhalt.chpl:10: error: halt reached
